Bug 1059654. Report memory for all images, not just those that are in the image cache. r=seth f=njn

The image cache is just a map from URI to imgRequest, so if two images have the same URI (because we couldn't re-use the cached one for whatever reason (ie expired))  one won't be in the cache.

Also images that have no proxies will eventually get removed from the cache, if they are kept alive we still want to report them.